@@ -1,0 +1,10 @@
+magaxis.Rd~
+magbar.Rd~
+magcon.Rd~
+magerr.Rd~
+magicaxis-package.Rd~
+maglab.Rd~
+magmap.Rd~
+magplot.Rd~
+magrun.Rd~
+.DS_Store
